# dicey

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
dicey/: Cargo.toml
dicey-cli/: Cargo.toml
dicey-cli/src/: main.rs
dicey/src/: ast.rs  bytecode.rs  compiler.rs  dicey.pest  lib.rs  vm.rs
src/: bytecode.rs  compiler.rs  dicey.pest  lib.rs  vm.rs
