[package]
name = "dicey-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dicey"
path = "./src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dialoguer = "0.10"

[dependencies.dicey]
path = "../dicey"

[dependencies.mimalloc]
version = "0.1"
default-features = false
